gap correction

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -42,7 +42,7 @@
 
 .loginContainer {
   display: flex;
-  gap: 8px;
+  gap: 12px;
   margin-right: 64px;
 }
 
